Recipe-service : 프로젝트 구조 구현
QueryDSL을 위한 QueryDSL 세팅 진행
Recipe 순환참조 해결
JwtAuthFilter를 Security Config에서 다루는 클래스 소속 멤버 변수에서 JwtAuthfilter의 메서드 소속 지역변수로 변경

#3

--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,7 @@ subprojects {
 
 
 configure(subprojects.findAll {
-    it.name.endsWith('-service')
+    it.name.endsWith('-service') || it.name=='common'
 }) {
     dependencies {
         implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
