refactory&fix : 멀티모듈 프로젝트 구조 및 코드 수정
security - httpformLogin, HttpBasic 제거
build.gradle에서 문서 생성 경로 수정
jwtUtils - refresh token 시간 변경
Recipe service의 url 매핑 개선

#6

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@ application.yaml
 *.p8
 *.html
 application.yml
+
+**/build/
+**/.gradle/
+.DS_Store
+**/out/
+**/bin/
+**/.idea/
+src/main/generated/
