Chat-service : 프로젝트 구현
MSA 적용 전 채팅 모듈 서비스 코드 완성.
Controller, Dto, Entity, Service 레이어의 코드 작성 완료

repository 및 쿼리 작업 예정
-> 낙관적락, 비관적락, 카프카 등의 비동기 메시징큐, 비동기 / 동기 방식의 요청,응답 처리 예정

#5

--- a/chatting-service/build.gradle
+++ b/chatting-service/build.gradle
@@ -8,8 +8,13 @@ ext {
     set('snippetsDir', file("build/generated-snippets"))
 }
 
+repositories {
+    mavenCentral()
+}
+
 
 dependencies {
+    implementation project(':common')
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
