--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,12 @@ subprojects {
 }
 
 
+configure(subprojects.findAll{it.name.endsWith('-service')}){
+    dependencies {
+        implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:4.3.0'
+    }
+}
+
 configure(subprojects.findAll {
     it.name.endsWith('-service') || it.name=='common'
 }) {
