--- a/recipe-service/src/main/resources/application.yml
+++ b/recipe-service/src/main/resources/application.yml
@@ -2,23 +2,42 @@
 # Default Profile (기본 프로필)
 # ===============================================
 # Please update the username and password for your environment.
+
+server:
+  port: 8082
+
 spring:
+  application:
+    name: recipe-service
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3307/recipe_service_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
     username: root
-    password: your_password
+    password: 1234
   jpa:
     hibernate:
       ddl-auto: update
+      dialect:
     properties:
       hibernate:
         format_sql: true
         show_sql: true
+        dialect: org.hibernate.dialect.MySQLDialect
     defer-datasource-initialization: true
   sql:
     init:
       mode: always
+
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+  instance:
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+
 
 jwt:
   secret-key: 'wj/F9MSWipKOgL6fkdRRI4sExXsds7WY0lSneex16JQ='
@@ -33,12 +52,15 @@ spring:
       on-profile: docker
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://recipe-mysql:3306/recipe_service_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
+    url: jdbc:mysql://mysql-recipe:3306/recipe_service_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
     username: root
-    password: your_password
+    password: 1234
   jpa:
     hibernate:
       ddl-auto: update
+    properties:
+      dialect: org.hibernate.dialect.MySQLDialect
+
 
 jwt:
   secret-key: 'wj/F9MSWipKOgL6fkdRRI4sExXsds7WY0lSneex16JQ='
