--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -5,15 +5,21 @@ server:
   port: 8081
 
 spring:
+  application:
+    name: user-service
+  data:
+    redis:
+      port: 6379
+      host: localhost
   h2:
     console:
       enabled: true
       path: /h2-console
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:userdb
-    username: sa
-    password:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/user_service_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
+    username: root
+    password: 1234
   jpa:
     hibernate:
       ddl-auto: update
@@ -21,6 +27,9 @@ spring:
       hibernate:
         format_sql: true
         show_sql: true
+        dialect: org.hibernate.dialect.MySQLDialect
+
+
     defer-datasource-initialization: true
 
 eureka:
@@ -53,17 +62,25 @@ apple:
 # Docker Profile (for Docker-Composed MySQL)
 # ===============================================
 spring:
+  data:
+    redis:
+      port: 6379
+      host: localhost
+
   config:
     activate:
       on-profile: docker
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://user-mysql:3306/user_service_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
+    url: jdbc:mysql://mysql-user:3306/user_service_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
     username: root
-    password: your_password
+    password: 1234
   jpa:
     hibernate:
       ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
 
 jwt:
   secret-key: 'wj/F9MSWipKOgL6fkdRRI4sExXsds7WY0lSneex16JQ='
@@ -73,6 +90,11 @@ jwt:
 # Test Profile (for Unit/Integration Tests)
 # ===============================================
 spring:
+  data:
+    redis:
+      port: 6379
+      host: localhost
+
   config:
     activate:
       on-profile: test
